# pilot

./: .gitattributes  .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  README.md  SECURITY.md  start-backend.bat
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: .env  .env.example  .gitignore  code_verification.py  codex_logs.py  config.py  connections.py  diagnostics.py  env_loader.py  job_permissions.py  jobs.py  main.py  mcp_client.py  memory.py  model_settings.py  net_guard.py  project_instructions.py  projects.py  pyproject.toml  scheduler.py  skill_library.py  store.py  tool_results.py
backend/agents/: __init__.py  context_manager.py  context_telemetry.py  coordinator.py  gateway.py  json_utils.py  local_runtime.py  loop.py  model_inventory.py  orchestrator.py  perception.py  providers.py  router.py  routing.py  runtime_phases.py  runtime_state.py  safety.py  task_contracts.py  turn_policy.py  untrusted.py  vision.py
backend/api/: mcp.py  settings.py  ws.py
backend/skills/: describe-project.md  find-user-file.md  github-issues.md  web-lookup.md
backend/tests/: _mcp_echo_server.py  conftest.py  test_agent_safety.py  test_audit_regressions.py  test_bind_host_guard.py  test_classify_structured.py  test_code_verification.py  test_comfyui_tool.py  test_command_risk.py  test_compatibility_eval.py  test_compose_evidence_bound.py  test_context_call_sites.py  test_context_config.py  test_context_manager.py  test_context_telemetry.py  test_coordinator.py  test_decide_step_retry.py  test_diagnostics.py  test_escalation.py  test_eval_scenarios.py  test_expert_team.py  test_extras_tools.py  test_freshness.py  test_github_tool.py  test_job_permissions.py  test_jobs.py  test_live_eval_offline.py  test_local_runtime.py  test_mcp_auth.py  test_mcp_client.py  test_memory.py  test_model_inventory.py  test_model_settings.py  test_net_guard.py  test_orchestrator_reply.py  test_project_instructions.py  test_projects.py  test_provider_roles.py  test_providers.py  test_registry.py  (+22 more)
backend/tests/eval/: __init__.py  compatibility.py  compatibility_live.py  fixtures.py  hostile_web.py  live_runner.py  live_tasks.py  runner.py  scenarios.py
backend/tests/eval/results/: README.md  latest-ollama.json  latest-ollama.md  latest-openai.json  latest-openai.md  latest.json  latest.md
backend/tests/eval/results/compatibility/: 2026-07-13-local-runtime-compatibility-v9.json  2026-07-13-local-runtime-compatibility-v9.md
backend/tests/fixtures/: README.md  context_near_limit_session.json
backend/tools/: __init__.py  codex.py  codex_cli.py  comfyui.py  command_risk.py  elements.py  extras.py  github.py  input.py  os_tools.py  registry.py  screen.py  search.py  system.py  web.py
codex/long-horizon/: decisions.md  plan.md  runbook.md  spec.md  status.md
docs/: eval-escalation-findings-2026-07-03.md  eval-live-findings-2026-07-02.md  eval-live-findings-2026-07-03.md  local-inference-compatibility.md  model-findings-2026-06.md  public-demo-scope.md  track-fidelity-audit-2026-06-17.md  track-model-validation-plan-2026-06-17.md  track-productization-backlog-2026-06-17.md
docs/design/: 02-inline.html  03-spotlight.html  index.html
frontend/: eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/app/: contextTelemetry.test.ts  contextTelemetry.ts  globals.css  layout.tsx  page.test.ts  page.tsx  strings.test.ts  strings.ts
frontend/components/: AbortButton.tsx  ActionLog.tsx  Dialog.tsx  InspectorPanel.tsx  JobsPanel.tsx  Markdown.tsx  ProjectBar.tsx  SettingsPanel.tsx  TaskInput.tsx  Toast.tsx
frontend/public/: manifest.json
frontend/styles/: animations.css  artifacts.css  base.css  components.css  composer.css  conversation.css  ds.css  layout.css  mobile.css  overlays.css  prose.css  tokens.css
mockups/: 01-workspace.html  02-calm.html  03-mission-control.html  index.html
mockups/v2/: canvas.html  console.html  (+2 more)
scripts/: README.md  dev.ps1
(+37 files in other folders)
