[project]
name = "pilot"
version = "0.1.0"
description = "Local AI agent that controls the computer via Ollama"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "pyautogui>=0.9.54",
    "pillow>=11.0.0",
    "uiautomation>=2.0.18",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "mcp[cli]>=1.0.0",
    "python-multipart>=0.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools", "agents", "api"]

[dependency-groups]
dev = []

[tool.pytest.ini_options]
# Markers used by the agent-flow eval harness (issue #44). The "eval" marker
# labels the deterministic scenario suite as a group so it can be selected with
# `-m eval` (or excluded with `-m 'not eval'`). Every eval scenario runs without
# Ollama or network; the marker is a label, not a gate for extras.
markers = [
    "eval: deterministic agent-flow + adversarial eval scenarios (no Ollama/network)",
]
