[project]
name = "pilot"
version = "0.1.0"
description = "Local-first, tool-using AI agent for Windows that verifies its own work — local Ollama or OpenAI backend, reproducible eval suite, layered safety model"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "pyautogui>=0.9.54",
    "pillow>=11.0.0",
    "uiautomation>=2.0.18",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "mcp[cli]>=1.0.0",
    "python-multipart>=0.0.12",
    "pypdf>=6.14.2",
    "pyperclip>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools", "agents", "api"]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.pyright]
# Basic-mode type checking scoped to the production backend source. The test
# suite carries a large pre-existing typing backlog (Optional access on
# eval-harness return values) that is a separate, larger unit of work, so
# `tests/` is excluded here and tracked as deferred backlog (see issue #70).
# `venvPath`/`venv` point pyright at the project virtualenv so third-party
# imports (httpx, pypdf, PIL, ...) resolve against the real dependency set.
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
exclude = [
    "tests",
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
]

[tool.coverage.run]
# Coverage measures the backend source; the test suite itself and generated
# runtime data are not part of the number.
omit = ["tests/*", "data/*"]

[tool.pytest.ini_options]
# Markers used by the agent-flow eval harness (issue #44). The "eval" marker
# labels the deterministic scenario suite as a group so it can be selected with
# `-m eval` (or excluded with `-m 'not eval'`). Every eval scenario runs without
# Ollama or network; the marker is a label, not a gate for extras.
markers = [
    "eval: deterministic agent-flow + adversarial eval scenarios (no Ollama/network)",
]
